--- a/css/style.css
+++ b/css/style.css
@@ -59,6 +59,10 @@ li {
   --gredient: linear-gradient(98.73deg, var(--main-color) -52.43%, rgba(254, 31, 39, 0) 82.99%);
 }
 
+body {
+  height: 100vh;
+}
+
 .btn-primary {
   background-color: var(--main-color);
   border: none;
@@ -300,6 +304,7 @@ main video {
   height: 100vh;
   background-color: var(--bg-color);
   z-index: 1000;
+  transition: 1s;
 }
 
 #waves {
@@ -505,4 +510,8 @@ main video {
 #Contact .map iframe {
   width: 100%;
   height: 100%;
+}
+
+.fade {
+  opacity: 0;
 }
